--- a/FrontEnd/scss/style.scss
+++ b/FrontEnd/scss/style.scss
@@ -1,6 +1,6 @@
 @import 'reset';
 
-@import 'popup';
+// @import 'popup';
 
 // Import des styles de pages spécifiques
 @import 'login';  // Votre page de login
