--- a/FrontEnd/scss/_popup.scss
+++ b/FrontEnd/scss/_popup.scss
@@ -1,5 +1,7 @@
+
 // Arrière-plan assombri
 .background {
+    
     position: fixed;
     top: 0;
     left: 0;
@@ -7,6 +9,7 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 1;
+    // z-index: -100;
 }
 
 // Popup blanc
@@ -24,6 +27,7 @@
     background: #FFF;
     border-radius: 10px;
     z-index: 2;
+    // z-index: -99;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -39,6 +43,7 @@ h2 {
     grid-template-columns: repeat(5, 1fr);
     gap: 6px;
     justify-items: center;
+
 }
 
 .thumbnail {
@@ -68,4 +73,5 @@ h2 {
     font-size: 14px;
     font-weight: 700;
     line-height: 36px;
+    
 }
