--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -247,4 +247,23 @@ nav li:hover {
 .barre-btn__button--active {
   background: #1D6154;
   color: #FFFEF8;
+}
+
+.admin-bar {
+  z-index: 3;
+  margin: 0;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 3rem;
+  left: 0;
+}
+.admin-bar__edit-mode {
+  font-size: 0.5rem;
+}
+.admin-bar__edit-icon {
+  font-size: 0.5rem;
 }/*# sourceMappingURL=style.css.map */
