--- a/FrontEnd/scss/_home.scss
+++ b/FrontEnd/scss/_home.scss
@@ -86,3 +86,27 @@ nav {
    }
   }
 }
+
+
+// Style Modification en Admin
+
+.admin-bar {
+  z-index: 3;
+  margin: 0;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+ 
+  background-color: black;
+  color: white;
+width: 100%;
+height: 3rem;
+left: 0;
+  &__edit-mode {
+    font-size: .5rem;
+  }
+
+  &__edit-icon {
+    font-size: .5rem;
+  }
+}
