--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -130,6 +130,173 @@ footer nav ul {
   margin: 2em;
 }
 
+.modif-window {
+  position: relative;
+}
+
+.background {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+}
+
+.popup {
+  position: fixed;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 630px;
+  height: 680px;
+  padding: 15px 15px 15px;
+  flex-shrink: 0;
+  background: #FFF;
+  border-radius: 10px;
+  z-index: 101;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.popup .close-icon {
+  width: 24px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  z-index: 3;
+}
+.popup .close-icon i {
+  font-size: 24px;
+}
+
+h2 {
+  padding-top: 60px;
+  padding-bottom: 45px;
+}
+
+.miniatures {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 6px;
+  justify-items: center;
+  max-height: 400px;
+  max-width: 500px;
+  overflow-y: auto;
+  margin: 0px 68px 40px;
+}
+
+.thumbnail-wrapper {
+  flex-basis: calc(10% - 6px);
+  margin: 3px;
+  position: relative;
+}
+.thumbnail-wrapper .thumbnail {
+  width: 79px;
+  height: 104.08px;
+  flex-shrink: 0;
+}
+.thumbnail-wrapper .icon-wrapper {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  width: 17px;
+  height: 17px;
+  background-color: black;
+  border-radius: 2px;
+  padding: 4px;
+}
+.thumbnail-wrapper .icon-wrapper i {
+  color: white;
+  font-size: 12px;
+}
+
+.separator {
+  width: 420px;
+  height: 1px;
+  background: #B3B3B3;
+  margin: 20px auto;
+}
+
+.add-photo-btn {
+  width: 237px;
+  height: 36px;
+  flex-shrink: 0;
+  border-radius: 60px;
+  background: #1D6154;
+  color: #FFF;
+  text-align: center;
+  font-family: "Syne", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 36px;
+}
+
+.photo-modifier {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.photo-modifier .top-left-arrow {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  height: 21px;
+  font-size: 21px;
+}
+.photo-modifier .stand-in-photo {
+  width: 420px;
+  height: 169px;
+  flex-shrink: 0;
+  background-color: #E8F1F6;
+  display: flex;
+  flex-direction: column;
+}
+.photo-modifier .stand-in-photo .my-photo-icon {
+  font-size: 76px;
+  width: 76px;
+  height: 76px;
+  flex-shrink: 0;
+}
+.photo-modifier .input-wrapper {
+  position: relative;
+}
+.photo-modifier .input-wrapper .fas.fa-angle-down {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+.photo-modifier .input-label {
+  color: #3D3D3D;
+  font-size: 14px;
+  font-weight: 500;
+}
+.photo-modifier .input-field {
+  border: transparent;
+  width: 420px;
+  height: 51px;
+  flex-shrink: 0;
+  background: #FFF;
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+  margin: 10px 0;
+  padding-right: 30px;
+}
+.photo-modifier .validate-button {
+  height: 37px;
+  width: 137px;
+  border: transparent;
+  border-radius: 60px;
+  background: #A7A7A7;
+  padding: 10px 30px;
+  color: white;
+}
+
 #login {
   width: 50%;
   margin: auto;
