--- a/FrontEnd/scss/_popup.scss
+++ b/FrontEnd/scss/_popup.scss
@@ -1,33 +1,47 @@
+.modif-window {
+    position: relative;
+}
 
 // Arrière-plan assombri
 .background {
-    
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    z-index: 1;
-    // z-index: -100;
-}
+    z-index: 100;
+  }
+  
 
 // Popup blanc
 .popup {
+    
+    .close-icon{
+        width: 24px;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        cursor:pointer;
+        z-index: 3;
+        i {
+font-size: 24px;
+        }
+    }
+
     position: fixed;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 630px;
-    height: 688px;
-    padding-right: 105px;
-    padding-left: 105px;
-    padding-bottom: 45px;
+    height: 680px;
+    padding: 15px 15px 15px; 
     flex-shrink: 0;
     background: #FFF;
     border-radius: 10px;
-    z-index: 2;
-    // z-index: -99;
+    z-index: 101;
+   
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -39,17 +53,48 @@ h2 {
 
 // Miniatures de photos à l'intérieur du popup
 .miniatures {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    // grid-template-columns: repeat(5, 1fr);
     gap: 6px;
     justify-items: center;
+    max-height: 400px;
+    max-width: 500px;
+    overflow-y: auto;
+    margin: 0px 68px 40px;
 
 }
 
-.thumbnail {
-    width: 78.123px;
-    height: 104.08px;
-    flex-shrink: 0;
+
+.thumbnail-wrapper {
+    flex-basis: calc(10% - 6px);
+    margin: 3px;
+    position: relative;
+    
+
+    .thumbnail {
+        width: 79px;
+        height: 104.08px;
+        flex-shrink: 0;
+        // padding: 6px;
+    }
+    .icon-wrapper {
+        position: absolute;
+        top: 6px;
+        right: 6px;
+        width: 17px;
+        height: 17px;
+        background-color: black;
+        border-radius: 2px;
+        padding: 4px;
+
+        i {
+            color: white;
+            font-size: 12px;  
+        }
+    }
 }
 
 // Barre de séparation
@@ -75,3 +120,78 @@ h2 {
     line-height: 36px;
     
 }
+
+
+// <!-- Espace drop in photo -->
+
+.photo-modifier {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    .top-left-arrow {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      height: 21px;
+      font-size: 21px;
+    }
+    
+    .stand-in-photo {
+        width: 420px;
+        height: 169px;
+        flex-shrink: 0;
+        background-color: #E8F1F6;
+        display: flex;
+        flex-direction: column;
+
+        .my-photo-icon {
+            font-size: 76px; 
+            width: 76px;
+            height: 76px;
+            flex-shrink: 0;
+          }
+    }
+      
+    
+    .input-wrapper {
+        position: relative;
+
+        .fas.fa-angle-down {
+            position: absolute;
+            right: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            pointer-events: none; 
+          }
+    }
+      
+      .input-label {
+        color: #3D3D3D;
+        font-size: 14px;
+        font-weight: 500;
+      }
+      
+      .input-field {
+        border: transparent;
+        width: 420px;
+        height: 51px;
+        flex-shrink: 0;
+        background: #FFF;
+        box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+        margin: 10px 0;
+        padding-right: 30px; 
+      }
+      
+     
+
+    .validate-button {
+        height: 37px;
+        width: 137px;
+        border: transparent;
+      border-radius: 60px;
+      background: #A7A7A7;
+      padding: 10px 30px;
+      color: white;
+    }
+  }
