--- a/FrontEnd/scss/_home.scss
+++ b/FrontEnd/scss/_home.scss
@@ -7,7 +7,10 @@ body {
 }
 
 footer {
+  flex-direction: row-reverse;
+  display: flex;
   background-color: white;
+  width: 100%;
 }
 
 header {
@@ -58,21 +61,22 @@ nav {
     }
   }
 }
+
 .main-content {
-  margin-top: 5rem;  
+  margin-top: 5rem;
 }
 
 
 // Bloc pour la barre de selection 
 .barre-btn {
   display: flex;
-  
+
   align-items: center;
   gap: 1rem;
   text-align: center;
   width: 100%;
   height: auto;
-  margin:2rem 0rem 2rem 0;
+  margin: 2rem 0rem 2rem 0;
 
   &__button {
     display: flex;
@@ -83,30 +87,30 @@ nav {
     color: #1D6154;
     padding: 1rem;
 
-    &--active 
-   {
-    background: #1D6154;
-    color: #FFFEF8;
-   }
+    &--active {
+      background: #1D6154;
+      color: #FFFEF8;
+    }
   }
 }
 
 
 
 // Style Edition en Admin
-.en-tete{
+.en-tete {
   display: flex;
   flex-direction: row;
   gap: 1rem;
 
 }
+
 .admin-bar {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 3;
-  
+
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -115,9 +119,11 @@ nav {
   color: white;
   width: 100%;
   height: 3rem;
-gap: 1rem;
-  &__edit-mode, &__edit-icon {
-    
+  gap: 1rem;
+
+  &__edit-mode,
+  &__edit-icon {
+
     height: 18px;
     font-size: 14px;
     line-height: 16px;
@@ -131,14 +137,15 @@ gap: 1rem;
 .modif-note {
   width: 84px;
   height: 18px;
-  
+
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
   text-align: center;
   gap: 1rem;
 }
-.modif-note__icon, .modif-note__text {
-  display:flex;
-}
 
+.modif-note__icon,
+.modif-note__text {
+  display: flex;
+}
